<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home = doctor search / main screen -->
    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/ic_bottom_home_24"
        android:title="@string/home_bottom_home" />

    <!-- Medications = patient prescriptions -->
    <item
        android:id="@+id/menu_medications"
        android:icon="@drawable/ic_bottom_pills_24"
        android:title="@string/home_bottom_medications" />

    <!-- Appointments = patient appointments -->
    <item
        android:id="@+id/menu_appointments"
        android:icon="@drawable/ic_bottom_calendar_24"
        android:title="@string/home_bottom_appointments" />

    <!-- History -->
    <item
        android:id="@+id/menu_history"
        android:icon="@drawable/ic_bottom_history_24"
        android:title="@string/home_bottom_history" />

</menu>
