<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Home = overall dashboard -->
    <item
        android:id="@+id/menu_home"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/home_bottom_home" />

    <!-- Calendar = doctor's schedule / appointments -->
    <item
        android:id="@+id/menu_calendar"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/home_bottom_calendar" />

    <!-- Patients = manage linked patients -->
    <item
        android:id="@+id/menu_patients"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/home_bottom_patients" />

    <!-- Office = office hours / schedule settings -->
    <item
        android:id="@+id/menu_office"
        android:icon="@android:drawable/ic_dialog_email"
        android:title="@string/home_bottom_office" />

</menu>
